force-app/main/default/objects/ubxEvent__c/ubxEvent__c.object-meta.xml
<CustomObject>
    <description>Collecting Object for all kind of external events u-blox could hold or participate</description>
    <label>Investor Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investor Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>