force-app/main/default/objects/ubxEvent__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <inlineHelpText>Name the city wher all happens</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>