force-app/main/default/objects/ubxEvent__c/fields/Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants__c</fullName>
    <description>Number of participants at the presentation</description>
    <inlineHelpText>Number of participants at the presentation</inlineHelpText>
    <label>Number of Participants</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>