force-app/main/default/objects/ubxEvent__c/fields/Organised_by__c.field-meta.xml
<CustomField>
    <fullName>Organised_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organised by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investor Events</relationshipLabel>
    <relationshipName>Investor_Events</relationshipName>
    <type>Lookup</type>
</CustomField>