force-app/main/default/objects/ubxEvent__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Date the event starts</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>