force-app/main/default/objects/ubxEvent__c/fields/Type_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Event__c</fullName>
    <inlineHelpText>Describes the type of an event</inlineHelpText>
    <label>Type of Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Roadshow</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Press Conference</fullName>
            </value>
            <value>
                <fullName>Maker Fair</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>